--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test-web:js": "jest --selectProjects Web-JavaScript",
+    "test-web:ts": "jest --selectProjects Web-TypeScript"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "@babel/node": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "jest": "^26.6.0",
-    "jest-environment-jsdom-sixteen": "^1.0.3"
+    "jest-environment-jsdom-sixteen": "^1.0.3",
+    "ts-jest": "^26.4.3"
   }
 }
