finished typescript tests and removed ts setup file

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "random-email": "^1.0.3",
-    "realm-web": "^1.0.0"
+    "realm-web": "^1.0.0",
+    "typescript": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
