--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test-web:js": "jest --selectProjects Web-JavaScript",
-    "test-web:ts": "jest --selectProjects Web-TypeScript"
+    "test-web:ts": "jest --selectProjects Web-TypeScript",
+    "lint": "eslint __tests__/*",
+    "prettier": "prettier --write __tests__/*"
   },
   "keywords": [],
   "author": "",
@@ -19,8 +21,15 @@
     "@babel/core": "^7.12.3",
     "@babel/node": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.0",
     "jest-environment-jsdom-sixteen": "^1.0.3",
+    "prettier": "^2.1.2",
     "ts-jest": "^26.4.3"
   }
 }
